salesforce_sfdx/main/default/objects/OSMX_Umbrales__c/OSMX_Umbrales__c.object-meta.xml
<CustomObject>
    <label>OSMX_Umbrales</label>
    <nameField>
        <label>OSMX_Umbrales Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>OSMX_Umbrales</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>