salesforce_sfdx/main/default/objects/OSMX_Umbrales__c/fields/Cargo_por_capacidad__c.field-meta.xml
<CustomField>
    <fullName>Cargo_por_capacidad__c</fullName>
    <label>Cargo por capacidad</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>