salesforce_sfdx/main/default/objects/OSMX_Umbrales__c/fields/Clasificacion_tarifa__c.field-meta.xml
<CustomField>
    <fullName>Clasificacion_tarifa__c</fullName>
    <label>Clasificacion_tarifa</label>
    <length>15</length>
    <type>Text</type>
</CustomField>