salesforce_sfdx/main/default/objects/OSMX_Umbrales__c/fields/conexion_estandar__c.field-meta.xml
<CustomField>
    <fullName>conexion_estandar__c</fullName>
    <label>conexion_estandar</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>