salesforce_sfdx/main/default/objects/OSMX_Umbrales__c/fields/Conexion_No_Estandar__c.field-meta.xml
<CustomField>
    <fullName>Conexion_No_Estandar__c</fullName>
    <label>Conexion_No_Estandar</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>