salesforce_sfdx/main/default/objects/OSMX_Umbrales__c/fields/Distribucion_comerc_cargo_vol__c.field-meta.xml
<CustomField>
    <fullName>Distribucion_comerc_cargo_vol__c</fullName>
    <label>Distribucion_comerc_cargo_vol</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>