salesforce_sfdx/main/default/objects/OSMX_Umbrales__c/fields/Rango_inferior__c.field-meta.xml
<CustomField>
    <fullName>Rango_inferior__c</fullName>
    <label>Rango_inferior</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>