salesforce_sfdx/main/default/objects/OSMX_Umbrales__c/fields/Rango_superior__c.field-meta.xml
<CustomField>
    <fullName>Rango_superior__c</fullName>
    <label>Rango_superior</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>